--- a/ProgAtoZ-ClassicsMadlibs/madlibs.css
+++ b/ProgAtoZ-ClassicsMadlibs/madlibs.css
@@ -33,7 +33,7 @@
 	font-size: 13px;
 }
 
-#submit-button
+#submit-button, button
 {
 	margin: 10px;
 	padding: 5px;
@@ -50,4 +50,14 @@
 #passage span
 {
 	word-wrap: normal;
+}
+
+#playagain
+{
+	display: none;
+	text-align: center;
+
+	position: fixed;
+  	left: 50%;
+  	transform: translateX(-50%);
 }
